# rdatasets-search

./: README.md  pyproject.toml
src/rdatasets_search/: __init__.py  cli.py  search.py
tests/: __init__.py  test_case_insensitive_columns.py  test_data_having.py  test_edge_cases.py
