[project]
name = "rdatasets-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kenji Sato", email = "mail@kenjisato.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "typer>=0.12.0",
]

[project.scripts]
rdatasets-search = "rdatasets_search:main"
r-data = "rdatasets_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
